fix: permits table being too wide

--- a/src/app/dashboard/f/carbon/pe/@table/styles.module.css
+++ b/src/app/dashboard/f/carbon/pe/@table/styles.module.css
@@ -37,6 +37,10 @@
 				@apply shadow-xs;
 			}
 		}
+
+		> .panel {
+			@apply w-full;
+		}
 	}
 }
 
